--- a/Auto Layout Demo/Base.lproj/Main.storyboard
+++ b/Auto Layout Demo/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                                 <state key="normal" title="Bottom Right"/>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Auto Layout" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AaM-7k-P6N">
-                                <rect key="frame" x="130.66666666666666" y="89" width="152.99999999999997" height="38.666666666666657"/>
+                                <rect key="frame" x="130.66666666666669" y="89" width="152.66666666666669" height="38.666666666666657"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -44,7 +44,7 @@
                                 <rect key="frame" x="16" y="163.33333333333334" width="382" height="148.00000000000003"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="148" id="ISB-Ja-ib2"/>
+                                    <constraint firstAttribute="height" constant="148.00000000000003" id="af7-3y-yRN"/>
                                 </constraints>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -54,19 +54,20 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="Jiw-QP-7vq" firstAttribute="top" secondItem="kW7-2M-YQ3" secondAttribute="top" constant="20" id="4gM-Jx-7m6"/>
-                            <constraint firstItem="wxU-GE-73d" firstAttribute="top" secondItem="kW7-2M-YQ3" secondAttribute="top" constant="20" id="5ac-kL-gBh"/>
-                            <constraint firstItem="Jiw-QP-7vq" firstAttribute="leading" secondItem="kW7-2M-YQ3" secondAttribute="leading" constant="16" id="7LX-3y-U4P"/>
-                            <constraint firstItem="n22-Ud-peZ" firstAttribute="top" secondItem="AaM-7k-P6N" secondAttribute="bottom" constant="35.5" id="H51-te-G4G"/>
-                            <constraint firstItem="Jyv-Df-oWZ" firstAttribute="leading" secondItem="kW7-2M-YQ3" secondAttribute="leading" constant="16" id="O7R-zQ-iEs"/>
-                            <constraint firstItem="AaM-7k-P6N" firstAttribute="top" secondItem="kW7-2M-YQ3" secondAttribute="top" constant="89" id="VyH-0f-ieI"/>
-                            <constraint firstItem="n22-Ud-peZ" firstAttribute="leading" secondItem="kW7-2M-YQ3" secondAttribute="leading" constant="16" id="WNn-E2-ggo"/>
-                            <constraint firstItem="kW7-2M-YQ3" firstAttribute="trailing" secondItem="n22-Ud-peZ" secondAttribute="trailing" constant="16" id="WzY-NM-kqP"/>
-                            <constraint firstItem="kW7-2M-YQ3" firstAttribute="trailing" secondItem="wxU-GE-73d" secondAttribute="trailing" constant="16" id="Zum-eh-rnA"/>
-                            <constraint firstItem="kW7-2M-YQ3" firstAttribute="trailing" secondItem="8Km-Zv-hfV" secondAttribute="trailing" constant="16" id="eAD-zG-pBm"/>
-                            <constraint firstItem="kW7-2M-YQ3" firstAttribute="bottom" secondItem="Jyv-Df-oWZ" secondAttribute="bottom" constant="20" id="mmt-hb-7VA"/>
-                            <constraint firstItem="kW7-2M-YQ3" firstAttribute="bottom" secondItem="8Km-Zv-hfV" secondAttribute="bottom" constant="20" id="piz-hG-1kx"/>
-                            <constraint firstItem="AaM-7k-P6N" firstAttribute="centerX" secondItem="kW7-2M-YQ3" secondAttribute="centerX" id="yrL-zv-p4z"/>
+                            <constraint firstItem="n22-Ud-peZ" firstAttribute="leading" secondItem="Jyv-Df-oWZ" secondAttribute="leading" id="66N-ZD-Fqw"/>
+                            <constraint firstItem="Jiw-QP-7vq" firstAttribute="baseline" secondItem="wxU-GE-73d" secondAttribute="baseline" id="E5e-Va-CEP"/>
+                            <constraint firstItem="kW7-2M-YQ3" firstAttribute="bottom" secondItem="Jyv-Df-oWZ" secondAttribute="bottom" constant="20" id="G8A-Fe-MKg"/>
+                            <constraint firstItem="wxU-GE-73d" firstAttribute="trailing" secondItem="n22-Ud-peZ" secondAttribute="trailing" id="JM3-LD-hSa"/>
+                            <constraint firstItem="AaM-7k-P6N" firstAttribute="centerX" secondItem="n22-Ud-peZ" secondAttribute="centerX" id="M8R-Mb-N6i"/>
+                            <constraint firstItem="AaM-7k-P6N" firstAttribute="top" secondItem="kW7-2M-YQ3" secondAttribute="top" constant="89" id="MTk-VC-iET"/>
+                            <constraint firstItem="n22-Ud-peZ" firstAttribute="trailing" secondItem="8Km-Zv-hfV" secondAttribute="trailing" id="PTJ-nT-fF3"/>
+                            <constraint firstItem="Jiw-QP-7vq" firstAttribute="top" secondItem="kW7-2M-YQ3" secondAttribute="top" constant="20" id="QVD-XH-J4c"/>
+                            <constraint firstItem="Jyv-Df-oWZ" firstAttribute="baseline" secondItem="8Km-Zv-hfV" secondAttribute="baseline" id="QgS-1g-Jp7"/>
+                            <constraint firstItem="AaM-7k-P6N" firstAttribute="leading" secondItem="kW7-2M-YQ3" secondAttribute="leading" constant="130.66666666666663" id="QgX-HE-utI"/>
+                            <constraint firstItem="Jiw-QP-7vq" firstAttribute="leading" secondItem="n22-Ud-peZ" secondAttribute="leading" id="hZv-Zi-Aba"/>
+                            <constraint firstItem="n22-Ud-peZ" firstAttribute="top" secondItem="AaM-7k-P6N" secondAttribute="bottom" constant="35.666666666666714" id="qSD-Fy-L9P"/>
+                            <constraint firstItem="AaM-7k-P6N" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rHO-Au-XQA"/>
+                            <constraint firstItem="Jiw-QP-7vq" firstAttribute="leading" secondItem="kW7-2M-YQ3" secondAttribute="leading" constant="16" id="ska-HP-mw2"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="kW7-2M-YQ3"/>
                     </view>
